# sqlinq

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.rst  config.hpp.in
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml  ci.yml
cmake/: plugins.cmake  sanitizers.cmake  schema_generator.cmake  sqlinq.cmake
db/mysql/: create_tables.sql
db/sqlite/: create_tables.sql  database.db  insert.sql
doc/config/: README.md
doc/migrations/: README.md
doc/tables/: README.md
examples/: CMakeLists.txt  README.md  aggregate_example.cpp  db.conf  example.cpp  linq_example.cpp  model.hpp  orm_example.cpp  record.hpp
examples/sql/sqlite/: create_tables.sql
examples/src/: advanced_example.cpp  basic_aggregate_example.cpp  basic_orm_example.cpp  model.hpp  record.hpp
include/sqlinq/: column.hpp  config.hpp  cursor.hpp  database.hpp  query.h  query.hpp  query_ast.hpp  sql_generator.hpp  table.hpp  type_traits.hpp  types.h  utility.hpp
include/sqlinq/backend/: backend_iface.hpp  intermediate_storage.hpp
include/sqlinq/detail/: binding.hpp  column.hpp  foreach.hpp  structure.hpp  type_traits.hpp  utility.hpp
include/sqlinq/mysql/: database.h  database.hpp  error.h
include/sqlinq/sqlite/: binding.hpp  database.h  database.hpp  error.h
include/sqlinq/types/: blob.hpp  datetime.hpp  decimal.hpp
src/backend/mysql/: CMakeLists.txt  mysql_backend.cpp  mysql_backend.hpp
src/backend/mysql/include/sqlinq/: mysql_backend.hpp
src/backend/sqlite/: CMakeLists.txt  sqlite_backend.cpp  sqlite_backend.hpp
src/backend/sqlite/include/sqlinq/: sqlite_backend.hpp
src/core/: CMakeLists.txt  datetime.cpp  decimal_formatter.cpp  decimal_parser.cpp
src/mysql/: database.cpp  error.cpp
src/sqlite/: database.cpp  error.cpp
tests/: CMakeLists.txt
tests/backend/: intermediate_storage_test.cpp  mysql_backend_test.cpp  sqlite_backend_test.cpp  test_model.hpp
tests/core/: database_test.cpp  db_result_test.cpp  db_statement_test.cpp  mock_backend.hpp
tests/types/: datetime_test.cpp  decimal_formatter_test.cpp  decimal_parser_test.cpp  decimal_test.cpp  static_assert.cpp
tools/: cpp2schema.py
